--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.17.0",
     "jest": "^28.1.1",
     "ts-node": "^10.8.1",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.3"
   }
 }
