--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Arnab Roy",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "yarn createFile && tsc",
+    "createFile": "rm -rf tmp && mkdir tmp && touch tmp/data.json",
     "start": "node dist/index.js",
     "test": "jest --watchAll=false --coverage"
   },
@@ -28,7 +29,6 @@
     "eslint": "^8.17.0",
     "jest": "^28.1.1",
     "ts-node": "^10.8.1",
-    "tslint": "^6.1.3",
     "typescript": "^4.7.3"
   }
 }
